--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -99,15 +99,15 @@
   },
   "active": "954e053413835ce4",
   "lastOpenFiles": [
-    "Untitled.md",
+    "index.md",
+    "Cities, Neighborhoods, Factions, and Characters.md",
     "Basic Moves.md",
+    "Basic Rules.md",
+    "Untitled.md",
     "Playbooks/_Overview.md",
     "Playbooks/Conduit.md",
     "Playbooks/Clamor.md",
     "Playbooks/Apparatus.md",
-    "Lists.md",
-    "Advancement.md",
-    "Magistrate.md",
-    "Cities, Neighborhoods, Factions, and Characters.md"
+    "Lists.md"
   ]
 }
