--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -100,14 +100,14 @@
   "active": "954e053413835ce4",
   "lastOpenFiles": [
     "index.md",
+    "Playbooks/Overview.md",
+    "Playbooks/_Overview.md",
+    "Playbooks/Apparatus.md",
     "Cities, Neighborhoods, Factions, and Characters.md",
     "Basic Moves.md",
     "Basic Rules.md",
     "Untitled.md",
-    "Playbooks/_Overview.md",
     "Playbooks/Conduit.md",
-    "Playbooks/Clamor.md",
-    "Playbooks/Apparatus.md",
-    "Lists.md"
+    "Playbooks/Clamor.md"
   ]
 }
