--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Advancement.md",
+            "file": "Moves.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Advancement.md",
+                "file": "Moves.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,12 +99,12 @@
   },
   "active": "954e053413835ce4",
   "lastOpenFiles": [
+    "Moves.md",
     "Advancement.md",
     "Gen.md",
     "Lists.md",
     "Magistrate.md",
     "Rules.md",
-    "Moves.md",
     "index.md",
     "Playbooks/Overview.md",
     "Playbooks/_Overview.md",
