Changed Use a Secret Move
Wrote Use a Secret example

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lists.md",
+            "file": "Moves.md",
             "mode": "source"
           }
         },
@@ -21,7 +21,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Lists.md",
+            "file": "Moves.md",
             "mode": "preview"
           }
         },
@@ -81,7 +81,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Lists.md",
+                "file": "Moves.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,10 +112,10 @@
   },
   "active": "954e053413835ce4",
   "lastOpenFiles": [
+    "Moves.md",
     "Lists.md",
     "index.md",
     "Rules.md",
-    "Moves.md",
     "Magistrate.md",
     "Playbooks/_Overview.md",
     "Advancement.md",
