--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,11 +9,21 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Moves.md",
+            "file": "Playbooks/Wellspring.md",
             "mode": "source"
           }
-        },
-        "group": "7140c32453efad28"
+        }
+      },
+      {
+        "id": "d245883e2605495e",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Playbooks/_Overview.md",
+            "mode": "source"
+          }
+        }
       },
       {
         "id": "251df098abdff2cd",
@@ -21,11 +31,10 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Moves.md",
+            "file": "ListofMoves.md",
             "mode": "preview"
           }
-        },
-        "group": "7140c32453efad28"
+        }
       }
     ],
     "direction": "vertical"
@@ -81,7 +90,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Moves.md",
+                "file": "Playbooks/Wellspring.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,15 +121,15 @@
   },
   "active": "954e053413835ce4",
   "lastOpenFiles": [
-    "Moves.md",
-    "Untitled.md",
-    "Lists.md",
-    "index.md",
-    "Rules.md",
-    "Magistrate.md",
+    "Playbooks/Wellspring.md",
     "Playbooks/_Overview.md",
-    "Advancement.md",
-    "Gen.md",
-    "Playbooks/Overview.md"
+    "Playbooks/Vault.md",
+    "Playbooks/Remnant.md",
+    "Playbooks/Pillar.md",
+    "Playbooks/Foundry.md",
+    "Playbooks/Crossroads.md",
+    "ListofMoves.md",
+    "Untitled.md",
+    "Moves.md"
   ]
 }
