--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,18 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Conduit.md",
+            "file": "index.md",
+            "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "32b82a63066a6254",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Playbooks/Wellspring.md",
             "mode": "source"
           }
         }
@@ -21,17 +32,6 @@
           "type": "markdown",
           "state": {
             "file": "ListofMoves.md",
-            "mode": "preview"
-          }
-        }
-      },
-      {
-        "id": "edbbd828dfa909e2",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Moves.md",
             "mode": "source"
           }
         }
@@ -90,7 +90,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Conduit.md",
+                "file": "Playbooks/Wellspring.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -119,17 +119,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "954e053413835ce4",
+  "active": "32b82a63066a6254",
   "lastOpenFiles": [
-    "Playbooks/Conduit.md",
-    "Playbooks/Clamor.md",
-    "Playbooks/Apparatus.md",
+    "Playbooks/Wellspring.md",
+    "Playbooks/Vault.md",
     "Playbooks/Remnant.md",
-    "Moves.md",
-    "ListofMoves.md",
     "Playbooks/Pillar.md",
     "Playbooks/Foundry.md",
     "Playbooks/Crossroads.md",
-    "index.md"
+    "Playbooks/Conduit.md",
+    "Playbooks/Clamor.md",
+    "Playbooks/Apparatus.md",
+    "Moves.md"
   ]
 }
