--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -20,7 +20,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Apparatus.md",
+            "file": "Playbooks/Wellspring.md",
             "mode": "source"
           }
         }
@@ -90,7 +90,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Apparatus.md",
+                "file": "Playbooks/Wellspring.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -121,15 +121,15 @@
   },
   "active": "32b82a63066a6254",
   "lastOpenFiles": [
-    "Playbooks/Apparatus.md",
-    "Playbooks/Clamor.md",
-    "Playbooks/Conduit.md",
-    "Playbooks/Crossroads.md",
-    "Playbooks/Foundry.md",
-    "Playbooks/Pillar.md",
-    "Playbooks/Remnant.md",
-    "Playbooks/Vault.md",
     "Playbooks/Wellspring.md",
+    "Playbooks/Vault.md",
+    "Playbooks/Remnant.md",
+    "Playbooks/Pillar.md",
+    "Playbooks/Foundry.md",
+    "Playbooks/Crossroads.md",
+    "Playbooks/Conduit.md",
+    "Playbooks/Clamor.md",
+    "Playbooks/Apparatus.md",
     "Moves.md"
   ]
 }
