Updates to Crossroads

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,23 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "954e053413835ce4",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "index.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
         "id": "32b82a63066a6254",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Vault.md",
+            "file": "Playbooks/Crossroads.md",
             "mode": "source"
           }
         }
@@ -90,7 +79,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Vault.md",
+                "file": "Playbooks/Crossroads.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -121,14 +110,14 @@
   },
   "active": "32b82a63066a6254",
   "lastOpenFiles": [
+    "Playbooks/Crossroads.md",
+    "Playbooks/Apparatus.md",
+    "Playbooks/Conduit.md",
+    "Playbooks/Clamor.md",
     "Playbooks/Vault.md",
     "Playbooks/Remnant.md",
     "Playbooks/Pillar.md",
     "Playbooks/Foundry.md",
-    "Playbooks/Crossroads.md",
-    "Playbooks/Conduit.md",
-    "Playbooks/Clamor.md",
-    "Playbooks/Apparatus.md",
     "Playbooks/Wellspring.md",
     "Moves.md"
   ]
