--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -93,7 +93,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Moves.md",
+                "file": "Playbooks/Conduit.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -122,12 +122,12 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "0a2470f003478826",
+  "active": "32b82a63066a6254",
   "lastOpenFiles": [
-    "Moves.md",
     "Playbooks/Conduit.md",
-    "ListofMoves.md",
     "Playbooks/Clamor.md",
+    "Moves.md",
+    "ListofMoves.md",
     "Playbooks/Crossroads.md",
     "Playbooks/Apparatus.md",
     "Playbooks/Vault.md",
