--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -6,35 +6,10 @@
       {
         "id": "32b82a63066a6254",
         "type": "leaf",
-        "dimension": 33.420365535248045,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Conduit.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "251df098abdff2cd",
-        "type": "leaf",
-        "dimension": 25.326370757180154,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "ListofMoves.md",
-            "mode": "preview"
-          }
-        }
-      },
-      {
-        "id": "0a2470f003478826",
-        "type": "leaf",
-        "dimension": 41.253263707571804,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Moves.md",
+            "file": "Playbooks/Foundry.md",
             "mode": "source"
           }
         }
@@ -93,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Conduit.md",
+                "file": "Playbooks/Foundry.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -124,15 +99,15 @@
   },
   "active": "32b82a63066a6254",
   "lastOpenFiles": [
+    "Playbooks/Foundry.md",
+    "Playbooks/Clamor.md",
     "Playbooks/Conduit.md",
     "Playbooks/Crossroads.md",
-    "Playbooks/Foundry.md",
-    "Playbooks/Pillar.md",
-    "Playbooks/Wellspring.md",
-    "Playbooks/Vault.md",
-    "Playbooks/Remnant.md",
-    "Moves.md",
     "Playbooks/Apparatus.md",
-    "Playbooks/Clamor.md"
+    "Moves.md",
+    "Playbooks/Pillar.md",
+    "Playbooks/Remnant.md",
+    "Playbooks/Wellspring.md",
+    "Playbooks/Vault.md"
   ]
 }
