--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -12,18 +12,20 @@
             "file": "Lists.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "e31c51ebe2cba55c"
       },
       {
-        "id": "2f2ef4358ffafc46",
+        "id": "480e4c2691aaac09",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Moves.md",
-            "mode": "source"
+            "file": "Lists.md",
+            "mode": "preview"
           }
-        }
+        },
+        "group": "e31c51ebe2cba55c"
       }
     ],
     "direction": "vertical"
