--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
           "type": "markdown",
           "state": {
             "file": "Lists.md",
-            "mode": "source"
+            "mode": "preview"
           }
         }
       }
