Switching facts to beliefs

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -126,13 +126,13 @@
   "lastOpenFiles": [
     "Playbooks/Apparatus.md",
     "Playbooks/Clamor.md",
+    "Playbooks/Conduit.md",
     "Moves.md",
     "ListofMoves.md",
     "index.md",
     "Playbooks/Skyline.md",
     "Playbooks/Vault.md",
     "Playbooks/Remnant.md",
-    "Playbooks/Wellspring.md",
-    "Playbooks/Pillar.md"
+    "Playbooks/Wellspring.md"
   ]
 }
