--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -6,35 +6,10 @@
       {
         "id": "32b82a63066a6254",
         "type": "leaf",
-        "dimension": 39.8443579766537,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Clamor.md",
-            "mode": "source"
-          }
-        }
-      },
-      {
-        "id": "4b4bcf24bd1c48d1",
-        "type": "leaf",
-        "dimension": 26.07003891050584,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "ListofMoves.md",
-            "mode": "preview"
-          }
-        }
-      },
-      {
-        "id": "ba34624fe70267e9",
-        "type": "leaf",
-        "dimension": 34.08560311284047,
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Moves.md",
+            "file": "Playbooks/Conduit.md",
             "mode": "source"
           }
         }
@@ -93,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Moves.md",
+                "file": "Playbooks/Conduit.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -122,17 +97,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "ba34624fe70267e9",
+  "active": "32b82a63066a6254",
   "lastOpenFiles": [
-    "Moves.md",
-    "Playbooks/Clamor.md",
-    "Playbooks/Apparatus.md",
-    "Playbooks/Remnant.md",
-    "Playbooks/Pillar.md",
-    "Playbooks/Foundry.md",
-    "Playbooks/Crossroads.md",
     "Playbooks/Conduit.md",
-    "ListofMoves.md",
-    "index.md"
+    "Playbooks/Crossroads.md",
+    "Playbooks/Foundry.md",
+    "Playbooks/Pillar.md",
+    "Playbooks/Remnant.md",
+    "Playbooks/Skyline.md",
+    "Playbooks/Wellspring.md",
+    "Playbooks/Vault.md",
+    "Moves.md",
+    "Rules.md"
   ]
 }
