--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Playbooks/Conduit.md",
-            "mode": "source"
+            "file": "ListofMoves.md",
+            "mode": "preview"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Playbooks/Conduit.md",
+                "file": "ListofMoves.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,15 +99,15 @@
   },
   "active": "32b82a63066a6254",
   "lastOpenFiles": [
+    "ListofMoves.md",
+    "Moves.md",
+    "Lists.md",
     "Playbooks/Conduit.md",
     "Playbooks/Crossroads.md",
     "Playbooks/Foundry.md",
     "Playbooks/Pillar.md",
     "Playbooks/Remnant.md",
     "Playbooks/Skyline.md",
-    "Playbooks/Wellspring.md",
-    "Playbooks/Vault.md",
-    "Moves.md",
-    "Rules.md"
+    "Playbooks/Wellspring.md"
   ]
 }
