--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "32b82a63066a6254",
+        "id": "38d150ec9e647bd6",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ListofMoves.md",
-            "mode": "preview"
+            "file": "Moves.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ListofMoves.md",
+                "file": "Moves.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,17 +97,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "32b82a63066a6254",
+  "active": "38d150ec9e647bd6",
   "lastOpenFiles": [
-    "ListofMoves.md",
     "Moves.md",
+    "OldStuff.md",
+    "Playbooks/Foundry.md",
+    "Playbooks/Apparatus.md",
     "Lists.md",
+    "ListofMoves.md",
     "Playbooks/Conduit.md",
     "Playbooks/Crossroads.md",
-    "Playbooks/Foundry.md",
     "Playbooks/Pillar.md",
-    "Playbooks/Remnant.md",
-    "Playbooks/Skyline.md",
-    "Playbooks/Wellspring.md"
+    "Playbooks/Remnant.md"
   ]
 }
