--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,6 +9,17 @@
         "state": {
           "type": "markdown",
           "state": {
+            "file": "Playbooks/Crossroads.md",
+            "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "14fc58d5cc7f0dce",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
             "file": "Moves.md",
             "mode": "source"
           }
@@ -68,7 +79,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Moves.md",
+                "file": "Playbooks/Crossroads.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,15 +110,15 @@
   },
   "active": "38d150ec9e647bd6",
   "lastOpenFiles": [
+    "Playbooks/Crossroads.md",
+    "Playbooks/Conduit.md",
+    "Playbooks/Clamor.md",
+    "Playbooks/Apparatus.md",
     "Moves.md",
     "OldStuff.md",
     "Playbooks/Foundry.md",
-    "Playbooks/Apparatus.md",
     "Lists.md",
     "ListofMoves.md",
-    "Playbooks/Conduit.md",
-    "Playbooks/Crossroads.md",
-    "Playbooks/Pillar.md",
-    "Playbooks/Remnant.md"
+    "Playbooks/Pillar.md"
   ]
 }
