--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -9,7 +9,18 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "index.md",
+            "file": "Playbooks/Crossroads.md",
+            "mode": "source"
+          }
+        }
+      },
+      {
+        "id": "20c5d15d064c3bcc",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "Moves.md",
             "mode": "source"
           }
         }
@@ -68,7 +79,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "index.md",
+                "file": "Playbooks/Crossroads.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -99,15 +110,15 @@
   },
   "active": "14fc58d5cc7f0dce",
   "lastOpenFiles": [
-    "index.md",
-    "Playbooks/Wellspring.md",
-    "Playbooks/Foundry.md",
     "Playbooks/Crossroads.md",
-    "Playbooks/Pillar.md",
-    "Playbooks/Remnant.md",
+    "Playbooks/Conduit.md",
+    "Playbooks/Foundry.md",
+    "Playbooks/Wellspring.md",
+    "Playbooks/Vault.md",
     "Playbooks/Skyline.md",
-    "Playbooks/Apparatus.md",
+    "Playbooks/Remnant.md",
     "Moves.md",
+    "Playbooks/Pillar.md",
     "Playbooks/Clamor.md"
   ]
 }
